--- a/MutableObject.nuspec
+++ b/MutableObject.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>MutableObject</id>
-    <version>1.1</version>
+    <version>$version$</version>
     <authors>Aleksander Heintz</authors>
     <owners>Aleksander Heintz</owners>
 	<projectUrl>https://github.com/Alxandr/MutableObject</projectUrl>
