--- a/MutableObject.nuspec
+++ b/MutableObject.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>MutableObject</id>
-    <version>$version$</version>
+    <version>1.3</version>
     <authors>Aleksander Heintz</authors>
     <owners>Aleksander Heintz</owners>
 	<projectUrl>https://github.com/Alxandr/MutableObject</projectUrl>
@@ -12,6 +12,10 @@
     <tags></tags>
     <dependencies>
       <dependency id="Castle.DynamicProxy" version="2.2.0" />
+      <dependency id="System.Collections.Immutable" version="1.1.33-beta" />
+      <dependency id="NLog" version="3.1.0.0" />
     </dependencies>
   </metadata>
+  <files>
+  </files>
 </package>
